<resources>
    <string name="app_name">Quiz</string>
    <string name="question1title">Question 1</string>
    <string name="question2title">Question 2</string>
    <string name="question3title">Question 3</string>
    <string name="question4title">Question 4</string>
    <string name="question5title">Question 5</string>
    <string name="question1">Who are the founders of Flipkart ?</string>
    <string name="answerCorrectMario">Sachin Bansal</string>
    <string name="answerCorrectDonkeyKong">Binny Bansal</string>
    <string name="answerPortal">Ankit Bhati</string>
    <string name="question2">Which year was first Mac released ?</string>
    <string name="answerCorrect1989">1984</string>
    <string name="answer1979">2007</string>
    <string name="answer1999">1999</string>
    <string name="question3">What is the number of bones in an adult ?</string>
    <string name="LastNameLaraHint">No. of Bones</string>
    <string name="question4">\"The cake is a lie\" is a famous quote from the game:</string>
    <string name="answerBorderlands">Borderlands</string>
    <string name="question5">Which are Nintendo consoles?</string>
    <string name="submit">Submit</string>
    <string name="answerBioShock">BioShock</string>
    <string name="answerGameBoy">Game Boy</string>
    <string name="answerPSP">PSP</string>
    <string name="answerWii">Wii</string>
    <string name="alphabet">Alphabet Inc.</string>
    <string name="microsoft">Microsoft</string>
    <string name="none_of_these">None of these</string>
    <string name="question6">Which is parental organisation of Google ?</string>
    <string name="question6title">Question 6</string>
    <string name="question7title">Question 7</string>
    <string name="question7">How many computer languages are in use ?</string>
    <string name="twenty">20</string>
    <string name="two_thousand">2000</string>
    <string name="two_hundred">200</string>
    <string name="question8title">Question 8</string>
    <string name="question8">Which one is the first search engine ?</string>
    <string name="google">Google</string>
    <string name="archie">Archie</string>
    <string name="yahoo">Yahoo</string>
    <string name="question9title">Question 9</string>
    <string name="question9">Which is the first known virus ?</string>
    <string name="creeper_virus">Creeper Virus</string>
    <string name="torjan">Torjan</string>
    <string name="elk_cloner">Elk Cloner</string>
    <string name="question10title">Question 10</string>
    <string name="question10">What is the largest possible file size ?</string>
    <string name="question11title">Question 11</string>
    <string name="question11">Which is the latest Android\'s stable release ?</string>
    <string name="p">Android P</string>
    <string name="marshmallow">Marshmallow</string>
    <string name="oreo">Oreo</string>
    <string name="question10a">4 TB</string>
    <string name="question10b">17.5 TB</string>
    <string name="question10c">18 TB</string>
</resources>
