<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@android:color/white">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question1title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question1"
                android:textSize="18sp" />


            <CheckBox
                android:id="@+id/checkboxQuest1AnswerMario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerCorrectMario" />

            <CheckBox
                android:id="@+id/checkboxQuest1AnswerDonkey"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerCorrectDonkeyKong" />

            <CheckBox
                android:id="@+id/checkboxQuest1AnswerPortal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerPortal" />

            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question2title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question2"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_1979"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1979" />

                <RadioButton
                    android:id="@+id/radio_1989"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerCorrect1989" />

                <RadioButton
                    android:id="@+id/radio_1999"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answer1999" />
            </RadioGroup>

            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question3title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question3"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/answerInputUserLastName"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LastNameLaraHint"
                android:inputType="text"
                android:maxLength="10" />


            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question4title" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question4"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio_bioShock"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerBioShock" />

                <RadioButton
                    android:id="@+id/radio_borderlands"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/answerBorderlands" />

                <RadioButton
                    android:id="@+id/radio_portal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none_of_these" />
            </RadioGroup>


            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question5title" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question5"
                android:textSize="18sp" />

            <CheckBox
                android:id="@+id/checkboxQuest5GameBoy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerGameBoy" />

            <CheckBox
                android:id="@+id/checkboxQuestPSP"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerPSP" />

            <CheckBox
                android:id="@+id/checkboxQuest5Wii"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/answerWii" />

            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question6title" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question6"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio2_alphabet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/alphabet" />

                <RadioButton
                    android:id="@+id/radio2_microsoft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/microsoft" />

                <RadioButton
                    android:id="@+id/radio2_not"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/none_of_these" />
            </RadioGroup>

            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question7title" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question7"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio3_alphabet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twenty" />

                <RadioButton
                    android:id="@+id/radio3_microsoft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_thousand" />

                <RadioButton
                    android:id="@+id/radio3_not"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/two_hundred" />
            </RadioGroup>

            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question8title" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question8"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio4_alphabet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/google" />

                <RadioButton
                    android:id="@+id/radio4_microsoft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/archie" />

                <RadioButton
                    android:id="@+id/radio4_not"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yahoo" />
            </RadioGroup>


            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question9title" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question9"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio5_alphabet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creeper_virus" />

                <RadioButton
                    android:id="@+id/radio5_microsoft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/torjan" />

                <RadioButton
                    android:id="@+id/radio5_not"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elk_cloner" />
            </RadioGroup>


            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question10title" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question10"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio6_alphabet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question10a" />

                <RadioButton
                    android:id="@+id/radio6_microsoft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question10b" />

                <RadioButton
                    android:id="@+id/radio6_not"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/question10c" />
            </RadioGroup>


            <TextView
                style="@style/hello"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/indie_flower"
                android:text="@string/question11title" />

            <TextView

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/shadows_into_light_two"
                android:text="@string/question11"
                android:textSize="18sp" />

            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <RadioButton
                    android:id="@+id/radio7_alphabet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/p" />

                <RadioButton
                    android:id="@+id/radio7_microsoft"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/marshmallow" />

                <RadioButton
                    android:id="@+id/radio7_not"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/oreo" />
            </RadioGroup>

        </LinearLayout>

    </ScrollView>

    <Button
        android:id="@+id/submitButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:text="@string/submit" />

</RelativeLayout>